--- a/excalidraw-app/package.json
+++ b/excalidraw-app/package.json
@@ -29,6 +29,7 @@
     "@excalidraw/random-username": "1.0.0",
     "@sentry/browser": "6.2.5",
     "@sentry/integrations": "6.2.5",
+    "@tanstack/react-query": "^5.66.0",
     "firebase": "8.3.3",
     "i18next-browser-languagedetector": "6.1.4",
     "idb-keyval": "6.0.3",
@@ -36,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "socket.io-client": "4.7.2",
+    "uuid": "^11.0.5",
     "vite-plugin-html": "3.2.2"
   },
   "prettier": "@excalidraw/prettier-config",
