chore(backend): added debug logs for backend auth
- Added log for save current excalidraw elements

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "build:version": "yarn --cwd ./excalidraw-app build:version",
     "build": "yarn --cwd ./excalidraw-app build",
     "build:preview": "yarn --cwd ./excalidraw-app build:preview",
-    "start": "yarn --cwd ./excalidraw-app start",
+    "start": "yarn --cwd ./excalidraw-app start --port=3001",
     "start:production": "yarn --cwd ./excalidraw-app start:production",
     "test:all": "yarn test:typecheck && yarn test:code && yarn test:other && yarn test:app --watch=false",
     "test:app": "vitest",
