feat: added delete functionality and fixed small bugs

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,11 +1,11 @@
-DATABASE_URL=xxx # (neon url)
-SUPABASE_URL=https://{}.supabase.co
-SUPABASE_ANON_KEY=
-AUTH_GOOGLE_ID=xxx
-AUTH_GOOGLE_SECRET=xxx
+AUTH_GOOGLE_ID=xxxx
+AUTH_GOOGLE_SECRET=xxxx
 
-S3_ENDPOINT=xxx
-S3_REGION=xxx
-S3_ACCESS_KEY_ID=xxx
-S3_ACCESS_KEY=xxx
+AUTH_SECRET=xxxx
+# NEXTAUTH_URL="http://localhost:5000"
 
+SUPABASE_URL=https://{your-project-id}.supabase.co
+SUPABASE_ANON_KEY=your-anon-key
+
+DATABASE_URL=posgres_url
+# DATABASE_URL_POOLED=pooled_url 
